--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <body>
 <!--link do js-->
 <link rel="stylesheet" href="js/javascript.js">
+  
    <nav id="main-nav">
-       <ul>
+      <ul>
            <li><a href="#about">o mnie</a></li>
            <li><a href="#skills">umiejętności</a></li>
            <li><a href="#portfolio">portfolio</a></li>
@@ -30,10 +31,11 @@
        </ul>
    </nav>
    
-   <header id="header">
-        <img src="img/header-background.jpg" alt="background">
-        <p id="name">Julia Golańska</p>
-        <p id="header-about">O mnie</p>
+   <header id="main-header">
+        <div id="container">
+            <h1 class="header" id=name>Jan <span class="green"> Nowak</span></h1>
+            <p class="header" id="job">Front-End Developer</p>
+        </div>
    </header>
    
    <section id="about">
