linki do social mediow

--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     
         <div id="social-media">
             <div id="facebook" class="social-media">
-                <i class="fab fa-facebook-f"></i>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
             </div>
             <div id="google" class="social-media">
-                <i class="fab fa-google-plus-g"></i>
+                <a href=""><i class="fab fa-google-plus-g"></i></a>
             </div>
             <div id="twitter" class="social-media">
-                <i class="fab fa-twitter"></i>
+                <a href=""><i class="fab fa-twitter"></i></a>
             </div>
             <div id="in" class="social-media">
-                <i class="fab fa-linkedin-in"></i>
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
      </div>
